ADDDED FETAURE FOR EMAIL SENT WHILE SIGN UP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,15 @@ cors.allow-credentials=true
 # Flyway is enabled by default, no need to exclude unless you want to disable
 # To disable, uncomment the following:
 # spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
+
+# Email Configuration
+# Gmail SMTP Configuration (you can change this to your preferred email provider)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tapanvai342@gmail.com
+spring.mail.password=diot azuq crcv nwdh
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
